--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@adonisjs/repl": "^3.1.7",
     "luxon": "^2.1.1",
     "mysql": "^2.18.1",
+    "node-pre-gyp": "^0.17.0",
+    "phc-bcrypt": "^1.0.7",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.20",
