--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "luxon": "^2.1.1",
     "mysql": "^2.18.1",
     "node-pre-gyp": "^0.17.0",
+    "phc-argon2": "^1.1.2",
     "phc-bcrypt": "^1.0.7",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
