--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.3.8",
+    "@symfony/webpack-encore": "^1.6.1",
     "adonis-preset-ts": "^2.1.0",
     "pino-pretty": "^7.2.0",
     "typescript": "~4.2",
@@ -20,6 +21,8 @@
     "@adonisjs/core": "^5.4.0",
     "@adonisjs/lucid": "^16.3.2",
     "@adonisjs/repl": "^3.1.7",
+    "@adonisjs/view": "^6.1.1",
+    "@popperjs/core": "^2.10.2",
     "luxon": "^2.1.1",
     "mysql": "^2.18.1",
     "node-pre-gyp": "^0.17.0",
