--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "node ace serve --watch",
     "build": "node ace build --production",
-    "start": "cd build;npm ci --production;node server.js"
+    "start": "cd build;node ace migration:run;npm ci --production;node server.js"
   },
   "engines":{
     "node":"16.11.1"
