--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,9 @@ NODE_ENV=development
 APP_KEY=oAXohJmp8-ebwrm8HJE-z25myhSqqNma
 DRIVE_DISK=local
 DB_CONNECTION=sqlite
-MYSQL_HOST=localhost
-MYSQL_PORT=3306
-MYSQL_USER=lucid
-MYSQL_PASSWORD=
-MYSQL_DB_NAME=lucid
 CACHE_VIEWS=false
+PG_HOST=localhost
+PG_PORT=5432
+PG_USER=lucid
+PG_PASSWORD=
+PG_DB_NAME=lucid
