--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   "dependencies": {
     "@adonisjs/auth": "^8.0.10",
     "@adonisjs/core": "^5.4.0",
-    "@adonisjs/lucid": "^16.3.2",
+    "@adonisjs/lucid": "^18.0.0",
     "@adonisjs/repl": "^3.1.7",
+    "@adonisjs/route-model-binding": "^1.0.1",
     "@adonisjs/view": "^6.1.1",
     "@popperjs/core": "^2.10.2",
     "luxon": "^2.1.1",
