--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
       "@adonisjs/repl",
       "@adonisjs/lucid",
       "@adonisjs/auth",
-      "@adonisjs/view"
+      "@adonisjs/view",
+      "@adonisjs/route-model-binding/build/adonis-typings"
     ]
   }
 }
