--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "phc-bcrypt": "^1.0.7",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.7.2",
     "source-map-support": "^0.5.20",
     "sqlite3": "^5.0.2"
   }
