Controlador Para cargar foto de perfil crear los slug para las noticias a partir de la clumna title

--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -25,7 +25,8 @@
     "@adonisjs/auth",
     "@adonisjs/view",
     "@adonisjs/route-model-binding/build/providers/RmbProvider",
-    "adonis5-scheduler"
+    "adonis5-scheduler",
+    "@adonisjs/lucid-slugify"
   ],
   "aceProviders": [
     "@adonisjs/repl"
