--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@adonisjs/auth": "^8.0.10",
     "@adonisjs/core": "^5.4.0",
     "@adonisjs/lucid": "^18.0.0",
+    "@adonisjs/lucid-slugify": "^2.2.1",
     "@adonisjs/repl": "^3.1.7",
     "@adonisjs/route-model-binding": "^1.0.1",
     "@adonisjs/view": "^6.1.1",
