--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
       "@adonisjs/auth",
       "@adonisjs/view",
       "@adonisjs/route-model-binding/build/adonis-typings",
-      "adonis5-scheduler"
+      "adonis5-scheduler",
+      "@adonisjs/lucid-slugify"
     ]
   }
 }
