--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "reflect-metadata": "^0.1.13",
     "socket.io": "^4.7.2",
     "source-map-support": "^0.5.20",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "uuid": "9.0.1"
   }
 }
