--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ PG_USER=lucid
 PG_PASSWORD=
 PG_DB_NAME=lucid
 CLOUDINARY_URL=
+SMTP_HOST=localhost
+SMTP_PORT=587
+SMTP_USERNAME=<username>
+SMTP_PASSWORD=<password>
