--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@adonisjs/core": "^5.4.0",
     "@adonisjs/lucid": "^18.0.0",
     "@adonisjs/lucid-slugify": "^2.2.1",
+    "@adonisjs/mail": "^8.2.1",
     "@adonisjs/repl": "^3.1.7",
     "@adonisjs/route-model-binding": "^1.0.1",
     "@adonisjs/view": "^6.1.1",
